Should fix: Bad MarbleQuickItem layout on HighDPI

This fix tries to be minimally invasive to avoid possible side-effects.
Thanks to Viktorija Lerotić for helping to get this fixed.

BUG: 408413